--- a/.gitignore
+++ b/.gitignore
@@ -38,17 +38,17 @@ captures/
 
 # IntelliJ
 *.iml
-*.idea/workspace.xml
-*.idea/tasks.xml
-*.idea/gradle.xml
-*.idea/assetWizardSettings.xml
-*.idea/dictionaries
-*.idea/libraries
+App/.idea/workspace.xml
+App/.idea/tasks.xml
+App/.idea/gradle.xml
+App/.idea/assetWizardSettings.xml
+App/.idea/dictionaries
+App/.idea/libraries
 # Android Studio 3 in .gitignore file.
-*.idea/caches
-*.idea/modules.xml
+App/.idea/caches
+App/.idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
-*.idea/navEditor.xml
+App/.idea/navEditor.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
