--- a/.gitignore
+++ b/.gitignore
@@ -193,7 +193,7 @@ media/
 *.pyc
 *.db
 *.pid
-
+*.idea
 # Ignore Django Migrations in Development if you are working on team
 
 # Only for Development only
