--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -34,9 +34,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
-    implementation 'com.github.bumptech.glide:glide:3.6.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
