--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
 }
