--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -16,16 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DigitalWardrobe">
-        <activity android:name=".AddClothesActivity">
-
-        </activity>
-        <activity android:name=".DashboardActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".AddClothesActivity" />
+        <activity android:name=".DashboardActivity" />
         <activity android:name=".TravelRecommendation" />
         <activity android:name=".RecommendActivity" />
         <activity android:name=".WelcomeActivity" />
@@ -38,8 +30,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity" >
-        </activity>
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".LoginActivity"
             android:theme="@style/Theme.DigitalWardrobe" />
