--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.maayyaannkk:ImagePicker:1.0.9'
 }
