--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -12,27 +12,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DigitalWardrobe">
-        <activity android:name=".ClothesDetailsActivity" />
-        <activity android:name=".AddClothesActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+        <activity android:name=".MyWardrobeActivity"
+            android:parentActivityName=".DashboardActivity">
+        </activity>
+        <activity android:name=".ClothDetailsActivity"
+            android:parentActivityName=".AddClothesActivity">
+        </activity>
+        <activity
+            android:name=".AddClothesActivity"
+            android:parentActivityName=".DashboardActivity">
         </activity>
         <activity android:name=".DashboardActivity" />
         <activity android:name=".TravelRecommendation" />
         <activity android:name=".RecommendActivity" />
-        <activity android:name=".WelcomeActivity"
-            android:theme="@style/SplashTheme"/>
+        <activity
+            android:name=".WelcomeActivity"
+            android:theme="@style/SplashTheme" />
         <activity
             android:name=".SplashActivity"
             android:theme="@style/SplashTheme">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+             <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+             <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
         <activity
