--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.github.maayyaannkk:ImagePicker:1.0.9'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
