--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'me.dm7.barcodescanner:zxing:1.9'
     implementation 'com.github.maayyaannkk:ImagePicker:1.0.9'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
