--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         </activity>
 
         <activity android:name=".FinalActivity"></activity>
+        <activity android:name=".ScanCodeActivity" />
 
+        <activity android:name=".BarCodeActivity" />
         <activity android:name=".DashboardActivity" />
         <activity android:name=".TravelRecommendation" />
         <activity android:name=".RecommendActivity" />
